--- a/age-checker.html
+++ b/age-checker.html
@@ -9,6 +9,7 @@
     <input type="text" placeholder="Enter your age" id="age_input">
     <button id="submit_age">Submit Age</button>
     <p id="input_message" class="input_message"></p>
+    <button id="reset_btn">Reset</button>
 
     <script src="./age-checker.js"></script>
 </body>
